[tool.poetry]
name = "pl_viz"
version = "0.1.0"
description = "Fetch and visualize data from PL."
authors = ["Ben Chen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
requests = ">=2.32.3"
matplotlib = ">=3.9.3"
statistics = ">=1.0.3.5"
altair = ">=5.5.0"
pandas = ">=2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"