[tool.poetry]
name = "pl_viz"
version = "0.1.0"
description = "Fetch and visualize data from PL."
authors = ["Ben Chen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
requests = ">=2.32.3"
matplotlib = ">=3.9.3"
statistics = ">=1.0.3.5"
altair = ">=5.5.0"
pandas = ">=2.2.3"
sphinx-rtd-theme = ">=3.0.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.4"
pytest-cov = ">=6.0.0"
jupyter = ">=1.1.1"
myst-nb = {version = ">=1.1.2", python = ">=3.10"}
sphinx-autoapi = ">=3.4.0"
sphinx-rtd-theme = ">=3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"